<resources>
    <string name="app_name">Remind Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="meeting_place">Meeting Place</string>
    <string name="add_person">Add Person</string>
    <string name="people">People</string>
    <string name="meeting_date">Meeting Date:</string>
    <string name="meeting_time">Meeting Time:</string>
    <string name="note_hint">notes</string>
    <string name="done_string">Add</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="error_message">can\'t not be empty!</string>
    <string name="delete_all">Delete All</string>
    <string name="there_is_no_people">Go out and be Social!</string>
    <string name="notes">Notes</string>
    <string name="registeration_time">Registration Time:</string>
    <string name="person_details_fragment">Person Details</string>
    <string name="delete_person">Delete</string>
    <string name="edit_person">Edit</string>
    <string name="title">Do you want to delete all the people</string>
    <string name="supporting_text">You will not be able to restore you data!</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="dark_mode_label">Dark Mode</string>
    <string name="light_mode_label">Light Mode</string>
    <string name="system_default_label">Default System</string>
    <string name="settings">Settings</string>
    <string name="title_delete_person">Do you want to delete this Person?</string>
    <string name="theme_category_title">Themes</string>
    <string name="choose_theme_title">App Theme</string>
    <string name="dummy_data_title">Add dummy Data</string>
    <string name="reminders_title_string">Reminders</string>
    <string name="notification_title_string">Notifications</string>
    <string name="notification_summary_string">enable notifications for your people</string>
    <string name="notify_label_string">Notify</string>
    <string name="main_notification_channel_name">"People reminders "</string>


    <string name="posterImage" translatable="false">poster %s</string>
    <string name="releaseDate" translatable="false">date %s</string>
    <string name="rating" translatable="false">rating %s</string>


    <string name="notification_messages">Do you remember %1$s? you met him at %2$s .</string>
    <string name="alarm_title_string">Number of reminders per day</string>
</resources>